src/org/jamocha/languages/sl/parser/SLParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SLParser.java */
package org.jamocha.languages.sl.parser;

import org.jamocha.languages.sl.sl2clips_adapter.configurations.*;
import java.io.InputStream;
import java.io.StringReader;

public class SLParser/*@bgen(jjtree)*/implements SLParserTreeConstants, SLParserConstants {/*@bgen(jjtree)*/
  protected JJTSLParserState jjtree = new JJTSLParserState();
        public static ContentSLConfiguration parse(String string) throws ParseException {
                SLParser parser = new SLParser(new StringReader(string));
        SimpleNode content = parser.Content();
        return (ContentSLConfiguration) content.jjtAccept(new SLInterpreter(), null);
        }

        public static ContentSLConfiguration parse(InputStream stream) throws ParseException {
                SLParser parser = new SLParser(stream);
        SimpleNode content = parser.Content();
        return (ContentSLConfiguration) content.jjtAccept(new SLInterpreter(), null);
        }

        public static void main(String args[]){
        try{
                System.out.print("SL> ");
            ContentSLConfiguration res = SLParser.parse(System.in);
            String result = res.compile(SLCompileType.ACTION_AND_ASSERT);
            System.out.println(result);
            System.out.println("Thank you.");
        }
        catch(ParseException e){
            System.out.println("parse(): an invalid expression!");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
        catch (TokenMgrError e){
            System.out.println("a Token Manager error!");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }

/* Content syntax follows */
  final public SimpleNode Content() throws ParseException {
 /*@bgen(jjtree) Content */
  SLContent jjtn000 = new SLContent(this, JJTCONTENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACE);
      label_1:
      while (true) {
        ContentExpression();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case LBRACE:
        case STRING:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(RBRACE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode ContentExpression() throws ParseException {
 /*@bgen(jjtree) ContentExpression */
  SLContentExpression jjtn000 = new SLContentExpression(this, JJTCONTENTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2)) {
        Proposition();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
          jj_consume_token(LBRACE);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IOTA:
          case ANY:
          case ALL:
            IdentifyingExpression();
            break;
          case ACTION:
          case PIPE:
          case SEMICOLON:
            ActionExpression();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(RBRACE);
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Proposition() throws ParseException {
 /*@bgen(jjtree) Proposition */
  SLProposition jjtn000 = new SLProposition(this, JJTPROPOSITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Wff();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Wff() throws ParseException {
 /*@bgen(jjtree) Wff */
  SLWff jjtn000 = new SLWff(this, JJTWFF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
        jj_consume_token(LBRACE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          UnaryLogicalOp();
          Wff();
          break;
        case AND:
        case OR:
        case IMPLIES:
        case EQUIV:
          BinaryLogicalOp();
          Wff();
          Wff();
          break;
        case FORALL:
        case EXISTS:
          Quantifier();
          Variable();
          Wff();
          break;
        case MODAL_B:
        case MODAL_U:
        case MODAL_PG:
        case MODAL_I:
          ModalOp();
          Agent();
          Wff();
          break;
        case FEASIBLE:
        case DONE:
          ActionOp();
          jj_consume_token(LBRACE);
          ActionExpression();
          jj_consume_token(RBRACE);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TRUE:
          case FALSE:
          case LBRACE:
          case STRING:
            Wff();
            break;
          default:
            jj_la1[3] = jj_gen;
            ;
          }
          break;
        case EQUAL:
        case RESULT:
          BinaryTermOp();
          TermOrIE();
          TermOrIE();
          break;
        case STRING:
          PredicateSymbol();
          label_2:
          while (true) {
            TermOrIE();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IOTA:
            case ANY:
            case ALL:
            case LBRACE:
            case STRING:
            case VARIABLE_IDENTIFIER:
            case INTEGER:
            case FLOAT:
            case DATETIME:
              ;
              break;
            default:
              jj_la1[4] = jj_gen;
              break label_2;
            }
          }
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(RBRACE);
        break;
      case TRUE:
      case FALSE:
      case STRING:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
          BooleanSymbol();
          break;
        case STRING:
          PropositionSymbol();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void TermOrIE() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
    case STRING:
    case VARIABLE_IDENTIFIER:
    case INTEGER:
    case FLOAT:
    case DATETIME:
      Term();
      break;
    case IOTA:
    case ANY:
    case ALL:
      IdentifyingExpression();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE_IDENTIFIER:
      Variable();
      break;
    case STRING:
    case INTEGER:
    case FLOAT:
    case DATETIME:
      Constant();
      break;
    case LBRACE:
      jj_consume_token(LBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ACTION:
      case PIPE:
      case SEMICOLON:
        ActionExpression();
        break;
      case STRING:
        FunctionalTerm();
        break;
      case SEQUENCE:
      case SET:
        SetOrSequence();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public SimpleNode IdentifyingExpression() throws ParseException {
 /*@bgen(jjtree) IdentifyingExpression */
  SLIdentifyingExpression jjtn000 = new SLIdentifyingExpression(this, JJTIDENTIFYINGEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ReferentialOp();
      TermOrIE();
      Wff();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void FunctionalTerm() throws ParseException {
    if (jj_2_2(2)) {
      FunctionalTermWithTermOrIE();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        FunctionalTermWithParameter();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public SimpleNode FunctionalTermWithTermOrIE() throws ParseException {
 /*@bgen(jjtree) FunctionalTermWithTermOrIE */
  SLFunctionalTermWithTermOrIE jjtn000 = new SLFunctionalTermWithTermOrIE(this, JJTFUNCTIONALTERMWITHTERMORIE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      FunctionSymbol();
      label_3:
      while (true) {
        TermOrIE();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IOTA:
        case ANY:
        case ALL:
        case LBRACE:
        case STRING:
        case VARIABLE_IDENTIFIER:
        case INTEGER:
        case FLOAT:
        case DATETIME:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_3;
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode FunctionalTermWithParameter() throws ParseException {
 /*@bgen(jjtree) FunctionalTermWithParameter */
  SLFunctionalTermWithParameter jjtn000 = new SLFunctionalTermWithParameter(this, JJTFUNCTIONALTERMWITHPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      FunctionSymbol();
      label_4:
      while (true) {
        Parameter();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PARAMETER_NAME:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_4;
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode ActionExpression() throws ParseException {
 /*@bgen(jjtree) ActionExpression */
  SLActionExpression jjtn000 = new SLActionExpression(this, JJTACTIONEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ACTION:
        t = jj_consume_token(ACTION);
        Agent();
        TermOrIE();
        break;
      case PIPE:
        t = jj_consume_token(PIPE);
        jj_consume_token(LBRACE);
        ActionExpression();
        jj_consume_token(RBRACE);
        jj_consume_token(LBRACE);
        ActionExpression();
        jj_consume_token(RBRACE);
        break;
      case SEMICOLON:
        t = jj_consume_token(SEMICOLON);
        jj_consume_token(LBRACE);
        ActionExpression();
        jj_consume_token(RBRACE);
        jj_consume_token(LBRACE);
        ActionExpression();
        jj_consume_token(RBRACE);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.setName(t.image);
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Agent() throws ParseException {
 /*@bgen(jjtree) Agent */
  SLAgent jjtn000 = new SLAgent(this, JJTAGENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      TermOrIE();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode SetOrSequence() throws ParseException {
 /*@bgen(jjtree) SetOrSequence */
  SLSetOrSequence jjtn000 = new SLSetOrSequence(this, JJTSETORSEQUENCE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SET:
        jj_consume_token(SET);
        break;
      case SEQUENCE:
        jj_consume_token(SEQUENCE);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IOTA:
        case ANY:
        case ALL:
        case LBRACE:
        case STRING:
        case VARIABLE_IDENTIFIER:
        case INTEGER:
        case FLOAT:
        case DATETIME:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_5;
        }
        TermOrIE();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Parameter() throws ParseException {
 /*@bgen(jjtree) Parameter */
  SLParameter jjtn000 = new SLParameter(this, JJTPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ParameterName();
      TermOrIE();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/* Operators */
  final public SimpleNode UnaryLogicalOp() throws ParseException {
 /*@bgen(jjtree) UnaryLogicalOp */
  SLUnaryLogicalOp jjtn000 = new SLUnaryLogicalOp(this, JJTUNARYLOGICALOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(NOT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.setName(t.image);
        {if (true) return jjtn000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode BinaryLogicalOp() throws ParseException {
 /*@bgen(jjtree) BinaryLogicalOp */
  SLBinaryLogicalOp jjtn000 = new SLBinaryLogicalOp(this, JJTBINARYLOGICALOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
        break;
      case OR:
        t = jj_consume_token(OR);
        break;
      case IMPLIES:
        t = jj_consume_token(IMPLIES);
        break;
      case EQUIV:
        t = jj_consume_token(EQUIV);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.setName(t.image);
        {if (true) return jjtn000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }
